# python_project_template

./: .env_example  .gitignore  README.md  config.yaml  pyproject.toml  scratch.py
app/: Home.py
app/pages/: 1_Structural_Analysis.py
documentation/data/: TS_SD_CLEAN_DESC.csv  data-dictionary-column-types.csv  data-dictionary-with-column-types.ods  data-dictionary.ods
documentation/meetings/: 10_06_2023.md  10_23_2023.md  11-27-2023.md  11_02_2023.md  11_13_2023.md  11_20_2023.md
documentation/planning/: AnalyticsProjectPlan.md  ExecutiveSummary.md
documentation/research/: Code-Review.md  data-review.md  hcup-requirements.md  review-draft-paper.md
documentation/transformations/: cleaning-pipeline.md
examples/: corr_matrix.py  create_final_ml_dataset.py  create_get_logger.py  create_in_out_column.py  create_target_column.py  describe_data.py  drop_null_cols_thresh.py  feature_importance_chi2.py  feature_importance_models.py  get_null_pct_by_col.py  inspect_sample_data.py  meger_feature_imp_chi2_models.py  mlflow_usage.py  model_lightgbm.py  model_lightgbm_deprecated.py  model_xgb.py  replace_col_val_with_null.py  split_dataset_service_type.py  stratify_split_data.py  tutorial_xgboost_hpo.py  tutorial_xgboost_sklearn.py  tutorial_xgboost_train.py
notebooks/: Fairness_Mitig_Thres.ipynb  SUD_MLClassification_TEDS2.ipynb  TEDS__Fairness.ipynb  Teds_data cleaning.ipynb  Teds_data cleaning_cc.ipynb  inspect_transformations.ipynb
tests/: conftest.py
tests/data/: test_data.csv
tests/src/: test_cleaning.py  test_enhance.py  (+1 more)
transforms/: pipeline.py
(+19 files in other folders)
